--- a/D6.html
+++ b/D6.html
@@ -81,89 +81,196 @@
     </footer>
     <script>
       /* ESERCIZIO 1
-       Scrivi una funzione per cambiare il titolo della pagina in qualcos'altro
-    */
+         Scrivi una funzione per cambiare il titolo della pagina in qualcos'altro
+      */
 
-      const changeTitle = function () {}
+      const changeTitle = function () {};
+      document.querySelector("h1").textContent = "Nuovo Titolo";
+      changeTitle();
 
       /* ESERCIZIO 2
-       Scrivi una funzione per aggiungere al titolo della pagina una classe "myHeading"
-    */
+         Scrivi una funzione per aggiungere al titolo della pagina una classe "myHeading"
+      */
 
-      const addClassToTitle = function () {}
+      const addClassToTitle = function () {};
+      document.querySelector("h1").classList.add("myHeading");
+      addClassToTitle();
 
       /* ESERCIZIO 3
-       Scrivi una funzione che cambi il testo dei p figli di un div
-      */
+         Scrivi una funzione che cambi il testo dei p figli di un div
+        */
 
-      const changePcontent = function () {}
+      const changePcontent = function () {};
+      const paragraphs = document.querySelectorAll("div p");
+      paragraphs.forEach((p) => {
+        p.textContent = "Testo cambiato ";
+      });
 
       /* ESERCIZIO 4
-       Scrivi una funzione che cambi la proprietà href di ogni link (tranne quello nel footer) con il valore https://www.google.com
-      */
+         Scrivi una funzione che cambi la proprietà href di ogni link (tranne quello nel footer) con il valore https://www.google.com
+        */
 
-      const changeUrls = function () {}
+      const changeUrls = function () {};
+      const links = document.querySelectorAll("a");
+      links.forEach((link) => {
+        if (!link.href.includes("developer.mozilla.org")) {
+          link.href = "https://www.google.com";
+        }
+      });
 
       /* ESERCIZIO 5
-       Scrivi una funzione che aggiunga un nuovo elemento lista alla seconda lista non ordinata
-    */
+         Scrivi una funzione che aggiunga un nuovo elemento lista alla seconda lista non ordinata
+      */
 
-      const addToTheSecond = function () {}
+      const addToTheSecond = function () {};
+      const secondList = document.getElementById("secondList");
+      const newListItem = document.createElement("li");
+      newListItem.textContent = "Nuovo elemento";
+      secondList.appendChild(newListItem);
 
       /* ESERCIZIO 6
-       Scrivi una funzione che aggiunga un paragrafo al primo div
-    */
+         Scrivi una funzione che aggiunga un paragrafo al primo div
+      */
 
-      const addParagraph = function () {}
+      const addParagraph = function () {
+        const firstDiv = document.querySelector("div");
+        const newParagraph = document.createElement("p");
+        newParagraph.textContent =
+          "Questo è un nuovo paragrafo aggiunto al primo div.";
+        firstDiv.appendChild(newParagraph);
+      };
+      addParagraph();
 
       /* ESERCIZIO 7
-       Scrivi una funzione che faccia scomparire la prima lista non ordinata
-    */
-
-      const hideFirstUl = function () {}
-
-      /* ESERCIZIO 8 
-       Scrivi una funzione che renda verde il background di ogni lista non ordinata
+         Scrivi una funzione che faccia scomparire la prima lista non ordinata
       */
 
-      const paintItGreen = function () {}
+      const hideFirstUl = function () {};
+      const firstList = document.getElementById("firstList");
+      firstList.style.display = "none";
+      hideFirstUl();
+
+      /* ESERCIZIO 8
+         Scrivi una funzione che renda verde il background di ogni lista non ordinata
+        */
+
+      const paintItGreen = function () {};
+      const uls = document.querySelectorAll("ul");
+      uls.forEach((ul) => {
+        ul.style.backgroundColor = "green";
+      });
 
       /* ESERCIZIO 9
-       Scrivi una funzione che rimuova l'ultima lettera dall'h1 ogni volta che l'utente lo clicca
-      */
+         Scrivi una funzione che rimuova l'ultima lettera dall'h1 ogni volta che l'utente lo clicca
+        */
 
-      const makeItClickable = function () {}
+      const makeItClickable = function () {};
+      const heading = document.querySelector("h1");
+      heading.addEventListener("click", function () {
+        this.textContent = this.textContent.slice(0, -1);
+      });
 
       /* ESERCIZIO 10
-       Crea una funzione che, al click sul footer, riveli l'URL del link interno come contenuto di un alert()
-      */
+         Crea una funzione che, al click sul footer, riveli l'URL del link interno come contenuto di un alert()
+        */
 
-      const revealFooterLink = function () {}
+      const revealFooterLink = function () {};
+      const footerLink = document.querySelector("footer a");
+      const footer = document.querySelector("footer");
+      footer.addEventListener("click", function () {
+        alert(footerLink.href);
+      });
 
       /* ESERCIZIO 11
-       Crea una funzione che crei una tabella nell'elemento con id "tableArea". 
-       La tabella avrà 5 elementi e questa struttura: immagine, nome prodotto, quantità, prezzo
-    */
+         Crea una funzione che crei una tabella nell'elemento con id "tableArea".
+         La tabella avrà 5 elementi e questa struttura: immagine, nome prodotto, quantità, prezzo
+      */
 
-      const generateTable = function () {}
+      const generateTable = function () {};
+      const tableArea = document.getElementById("tableArea");
+      const table = document.createElement("table");
+      table.innerHTML = `
+          <tr>
+            <th>Immagine</th>
+            <th>Nome Prodotto</th>
+            <th>Quantità</th>
+            <th>Prezzo</th>
+          </tr>
+          <tr>
+            <td><img src="https://via.placeholder.com/50" alt="Prodotto 1"></td>
+            <td>Prodotto 1</td>
+            <td>10</td>
+            <td>$100</td>
+          </tr>
+          <tr>
+            <td><img src="https://via.placeholder.com/50" alt="Prodotto 2"></td>
+            <td>Prodotto 2</td>
+            <td>5</td>
+            <td>$50</td>
+          </tr>
+          <tr>
+            <td><img src="https://via.placeholder.com/50" alt="Prodotto 3"></td>
+            <td>Prodotto 3</td>
+            <td>20</td>
+            <td>$200</td>
+          </tr>
+          <tr>
+            <td><img src="https://via.placeholder.com/50" alt="Prodotto 4"></td>
+            <td>Prodotto 4</td>
+            <td>15</td>
+            <td>$150</td>
+          </tr>
+          <tr>
+            <td><img src="https://via.placeholder.com/50" alt="Prodotto 5"></td>
+            <td>Prodotto 5</td>
+            <td>8</td>
+            <td>$80</td>
+          </tr>`;
+      tableArea.appendChild(table);
+      generateTable();
 
       /* ESERCIZIO 12
-       Crea una funzione che aggiunga una riga alla tabella precedentemente creata e fornisca i dati necessari come parametri
-    */
+         Crea una funzione che aggiunga una riga alla tabella precedentemente creata e fornisca i dati necessari come parametri
+      */
 
-      const addRow = function () {}
+      const addRow = function () {};
+      const addRowToTable = function (imageSrc, productName, quantity, price) {
+        const newRow = document.createElement("tr");
+        newRow.innerHTML = `
+            <td><img src="${imageSrc}" alt="${productName}"></td>
+            <td>${productName}</td>
+            <td>${quantity}</td>
+            <td>${price}</td>`;
+        table.appendChild(newRow);
+      };
+      addRowToTable("https://via.placeholder.com/50", "Prodotto 6", 12, "$120");
 
       /* ESERCIZIO 14
-      Crea una funzione che nasconda le immagini della tabella quando eseguita
-    */
+        Crea una funzione che nasconda le immagini della tabella quando eseguita
+      */
 
-      const hideAllImages = function () {}
+      const hideAllImages = function () {};
+      const hideImages = function () {
+        const images = table.querySelectorAll("img");
+        images.forEach((img) => {
+          img.style.display = "none";
+        });
+      };
+      hideAllImages();
 
       /* EXTRA ESERCIZIO 15
-      Crea una funzione che cambi il colore del h2 con id "changeMyColor" con un colore random ad ogni click ricevuto
-    */
+        Crea una funzione che cambi il colore del h2 con id "changeMyColor" con un colore random ad ogni click ricevuto
+      */
 
-      const changeColorWithRandom = function () {}
+      const changeColorWithRandom = function () {};
+      const changeColor = function () {
+        const h2 = document.getElementById("changeMyColor");
+        h2.style.color = `#${Math.floor(Math.random() * 16777215).toString(
+          16
+        )}`;
+      };
+
+      changeColorWithRandom();
     </script>
   </body>
 </html>
